# vulkan-overloaded

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: purpose.md
include/: application.hpp  extent.hpp  external.hpp  instance.hpp  offset.hpp  phydevice.hpp  rect2d.hpp  utils.hpp  validation.hpp  vkargsetter.hpp
src/: vkmain.cpp
